_css/main.css
/*! HTML5 Boilerplate v6.0.1 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
	 Base styles: opinionated defaults
 ========================================================================== */

html {
		color: white;
		font-size: 100%;
		line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::selection {
		background: gray;
		text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
		border: 0;
		border-top: 1px solid #ccc;
		display: block;
		height: 1px;
		margin: 1rem 0;
		padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
		vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
		border: 0;
		margin: 0;
		padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
		resize: vertical;
}

/* ==========================================================================
	 Author's custom styles
========================================================================== */


/* league gothic import */
@font-face {
	font-family: 'League Gothic';
    src: url('fonts/leaguegothic-regular-webfont.woff2') format('woff2'),
         url('fonts/leaguegothic-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
/* Generated by Font Squirrel (https://www.fontsquirrel.com) on January 8, 2019 */


/** Variables **/

:root {
  --main-light-color: #fff;
  --main-dark-color: #4f1486;
  --main-accent-color: #df4b62;

  --secondary-accent-color: #f77e63;
  --secondary-light-color: #e89d99;

  --third-accent-color: #f1ad6c;
  --third-light-color: #f3bd57;
}

/** General **/

body {
	background: var(--main-accent-color) url(/images/park_sounds_2019_grammo.png) -150px -80px no-repeat;
	background-size: initial;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
	font-size: 1.2rem;
	font-weight: 400;
	line-height: 1.4;
	margin: 0;
}

a {
	color: var(--main-light-color);
	font-weight: 500;
	text-decoration: none;
}

h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6
{
	font-family: 'League Gothic', sans-serif;
	font-weight: 500;
	font-style: normal;
	text-transform: uppercase;
	margin: 0 0 1rem 0;
}

h1, .h1 {
	font-size: 4rem;
}

h2, .h2 {
	font-size: 3rem;
}

h4, .h4 {
	font-size: 2rem;
}

.front-page footer article {
	max-width: 80vw;
	text-align: left;
	margin-top: 2em;
}


.front-page footer article * {
	font-family: inherit;
	font-size: small;
}


/** Header and navigation **/

.site-header {
	font-family: 'League Gothic', sans-serif;
	font-weight: 400;
	display: flex;
	justify-content: space-between;
	padding: .5rem;
	text-transform: uppercase;
	font-size: 1.6rem;
	position: sticky;
	top: 0;
	overflow: hidden;
}

.site-header a {
	color: var(--main-light-color);	
	text-decoration: none;
}

.site-header .logo {
	display: flex;
	align-items: center;
	margin-left: .2rem;
	margin-top: -.2rem;
}

.site-header .logo .title {

}

.site-header .logo .title:after {
	content: '-';
	margin: .2rem;
}

.site-header .logo .date {

}

.site-header .logo .location {
	display: none;
}

/** Navigation */

.mobile-nav {
  height: 100%;
  width: 300px;
  position: fixed;
  z-index: 100;
  opacity: 0;
  visibility: hidden;
  top: 0;
  left: 0;
  background-color: black;
  overflow-x: hidden;
  padding-top: 2rem;
  transform: translateX(-300px);
  transition: .3s all ease;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  text-align: left;
}

.mobile-nav.active {
  transform: translateX(0);
  opacity: 1;
  visibility: visible;
}

.mobile-nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.mobile-nav-menu ul a {
  font-size: .75rem;
}

.mobile-nav-menu li {
  border-bottom: 1px solid grey;
}

.mobile-nav a {
  padding: .5rem 1rem;
  text-decoration: none;
  font-size: 2rem;
  color: white;
  display: block;
  opacity: 1;
  /*transition: all 0.3s ease-in-out;*/
}

.mobile-nav a:not(.mobile-nav-close):hover {
  padding: .5rem 1.5rem;
}

.mobile-nav .mobile-nav-close {
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 2.5rem;
  width: 46px;
  height: 46px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 100%;
  padding: 0rem .25rem .25rem .1rem;
  user-select: none;
}

.mobile-nav .mobile-nav-close:hover {
  background-color: var(--main-dark-color);
}

/* Hamburger */
.hamburger-container {
  position: absolute;
  right: 1rem;
  top: 1rem;
}

.hamburger .line {
  background-color: var(--main-light-color);
  display: block;
  height: 4px;
  margin: 3px auto;
  width: 25px;
  border-radius: .2rem;
/*  transition: all 0.3s ease-in-out;*/
}

.hamburger:hover {
  cursor: pointer;
}

.hamburger {
  position: relative;
  /*transition: all 0.3s ease-in-out;*/
}

.hamburger.is-active{

}

.hamburger:before{
  content: "";
  position: absolute;
  box-sizing: border-box;
  width: 25px;
  height: 25px;
}

.hamburger.is-active:before {
}

.hamburger.is-active .line {
  width: 25px;
}

.hamburger.is-active .line:nth-child(1){

}

.hamburger.is-active .line:nth-child(2){

}

.hamburger.is-active .line:nth-child(3){

}




/** Main content **/

main {
	margin: 2rem auto;
	font-size: 1rem;
	width: 95%;
	min-height: 100vh;
}

body.video main {
	margin: 0;
	width: 100vw;
}

body.video main .content {
	margin: 1em;
}

main p {
	font-size: 1rem;
}

main img {
	max-width: 100%;
	height: auto;
}


/*** Front page main **/
.front-page main {
	color: white;
	text-align: center;
}

.front-page main h1
{
/*	font-size: 4rem;*/
}

.front-page main h2 {
	font-size: 3rem;
	margin-top: -2rem;
}

.tickets {
	background: var(--main-dark-color);
	color: white;
	display: inline-block;
	font-family: 'League Gothic';
	font-size: 2.5rem;
	padding: 0 .8rem;
	margin-top: 5rem;
	text-transform: uppercase;
}

/** Artists **/
ul.artists,
ul.artists h2,
ul.artists h3,
ul.artists h4,
ul.artists h5,
ul.artists h6
{
	display: inline-block;
	line-height: 1.2;
	list-style-type: none;
	margin: 0;
	padding: 0;
	transition: all .4s ease-in-out;
	white-space: nowrap;
}

ul.artists a {
	text-decoration: none;
}

ul.artists li:hover *
{

}

ul.artists sup {
	color: var(--main-light-color);
	font-size: 1rem;
}

ul.artists h2 {
	font-size: 4rem;
}

ul.artists h3 {
	font-size: calc(4rem*.8);
}

ul.artists h4 {
	font-size: calc(4rem*.7)
}

ul.artists h5 {
	font-size: calc(4rem*.6)
}

ul.artists h6 {
	font-size: calc(4rem*.5)
}


/*** Footer ***/
.site-footer {
	background: var(--main-dark-color);
	padding: 1rem 0;
	margin: 2rem 0 0 0;
	min-height: 200px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

.site-footer,
.site-footer a {
	color: var(--main-light-color);
}

.site-footer .logo {
	color: var(--main-light-color);
	text-align: center;
}

.site-footer .logo img {
	width: 10rem;
	height: auto;
	border: .4rem solid black;
	border-radius: 50%;
	background: white;
}

.site-footer a.tickets {
	margin-bottom: 1rem;
}

.social-icons .icon {
	fill: var(--main-light-color);
	vertical-align: initial;
	width: 2rem;
	height: 2rem;
	margin-left: .5rem;
}

/** responsive embeds */
.meta-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
    height: auto;
}

.meta-container iframe,
.meta-container object,
.meta-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}


/* ==========================================================================
	 EXAMPLE Media Queries for Responsive Design.
	 These examples override the primary ('mobile first') styles.
	 Modify as content requires.
	 ========================================================================== */

@media only screen and (min-width: 40rem) {

	/** General **/
	html {
		font-size: 1.2rem;
	}

	body {
		background-size: contain;
		background-position: 50% -250px;
	}

	.site-header,
	.main-navigation a:hover,
	.main-navigation a.current
	{
		font-size: 1.2rem;
	}


	/** Site header  */

	.site-header {
		padding: 1rem 0;
		overflow-x: auto;
	}

	.site-header .logo {
		min-width: 50%;
	}

	.site-header .logo .title {
		margin-left: .5rem;
	}

	.site-header .logo .title:after {
		content: '-';
		margin: .2rem;
	}

	.site-header .logo .title {
		display: inline;
	}

	.site-header .logo .date {
		display: inline;
	}

	/** main navigation */

	.main-navigation a {
		padding: .2rem .3rem;
	}

	.main-navigation li {
		margin-right: 1rem;
	}

	/** main content */

	main {
		width: 50vw;
	}

	body.video main .content {
		width: 50vw;
		margin: auto;
	}

}


/* ==========================================================================
	 Print styles.
	 Inlined to avoid the additional HTTP request:
	 http://www.phpied.com/delay-loading-your-print-css/
	 ========================================================================== */

@media print {
		*,
		*:before,
		*:after {
				background: transparent !important;
				color: #000 !important; /* Black prints faster: http://www.sanbeiji.com/archives/953 */
				box-shadow: none !important;
				text-shadow: none !important;
		}

		a,
		a:visited {
				text-decoration: underline;
		}

		a[href]:after {
				content: " (" attr(href) ")";
		}

		abbr[title]:after {
				content: " (" attr(title) ")";
		}

		/*
		 * Don't show links that are fragment identifiers,
		 * or use the `javascript:` pseudo protocol
		 */

		a[href^="#"]:after,
		a[href^="javascript:"]:after {
				content: "";
		}

		pre {
				white-space: pre-wrap !important;
		}
		pre,
		blockquote {
				border: 1px solid #999;
				page-break-inside: avoid;
		}

		/*
		 * Printing Tables:
		 * http://css-discuss.incutio.com/wiki/Printing_Tables
		 */

		thead {
				display: table-header-group;
		}

		tr,
		img {
				page-break-inside: avoid;
		}

		p,
		h2,
		h3 {
				orphans: 3;
				widows: 3;
		}

		h2,
		h3 {
				page-break-after: avoid;
		}
}

